--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     ],
     "homepage": "https://github.com/dinuwah/HENTAI-QUEEN",
     "author": {
-        "name": "Dinuwa Official²⁰²³"
+        "name": "×͜×ᵃʳⁱᵃˢ᭄𝒏𝒂𝒑𝒖𝒓𝒂᭄ᵒᶠᶠⁱᶜⁱᵃˡ࿐"
     },
     "repository": {
         "type": "git",
